--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link rel="dns-prefetch" href="http://image.julipay.com"/>
   <!-- meta -->
   <!-- title -->
-  <!-- style -->
 </head>
 <body>
 <div id="root"><!-- app --></div>
 <!-- script -->
+<!-- state -->
 </body>
 </html>
