--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <link rel="dns-prefetch" href="//at.alicdn.com"/>
   <link rel="dns-prefetch" href="http://image.julipay.com"/>
+  <link rel="dns-prefetch" href="https://api.julipay.com"/>
   <!-- meta -->
   <!-- title -->
 </head>
