--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta name="renderer" content="webkit"/>
   <meta name="force-rendering" content="webkit"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <link rel="dns-prefetch" href="//static.julipay.com"/>
+  <link rel="dns-prefetch" href="//image.julipay.com"/>
+  <link rel="dns-prefetch" href="//api.julipay.com"/>
   <link rel="dns-prefetch" href="//at.alicdn.com"/>
-  <link rel="dns-prefetch" href="http://image.julipay.com"/>
-  <link rel="dns-prefetch" href="https://api.julipay.com"/>
+  <meta name="baidu-site-verification" content="2g0ZQYjnLd" />
   <!-- meta -->
   <!-- title -->
 </head>
 <body>
 <div id="root"><!-- app --></div>
+<script>
+  var _hmt = _hmt || [];
+  (function () {
+    var hm = document.createElement("script")
+    hm.src = "https://hm.baidu.com/hm.js?7968d5e6021d471e6dd01e75edfe7709"
+    var s = document.getElementsByTagName("script")[0]
+    s.parentNode.insertBefore(hm, s)
+  })()
+</script>
 <!-- script -->
 <!-- state -->
 </body>
